# logoRNN

./: .gitignore  CMakeLists.txt  README.md  design.md  scoringprocess.sh  simpletest.py  test_proposals.sh  testres.txt  train.py  train_proposals.sh
ext/egbis/: CMakeLists.txt
include/: segment.hpp  selectsearch.hpp  utils.hpp
include/proposal/: selectsearch.hpp
lib/: roidata.py
lib/datasets/: __init__.py  imdb.py  inria.py  pascal_voc.py
lib/fast_rcnn/: config.py  test.py  train.py
lib/roi_data_layer/: customoverlap.py  minibatch.py  roidb.py
models/: image.sh  solver.prototxt  test.prototxt  train.prototxt
proposal/include/: proposal.hpp  utils.hpp
proposal/src/: proposal.cpp  selectsearch.cpp
pythontools/: assess_bbox.py  roidb.py  test_net.py  train_net.py
src/: segment.cpp  selectsearch.cpp  utils.cpp
src/proposal/: proposal.cpp  segment.cpp  selectsearch.cpp
tools/: main.cpp  opgen.cpp  regionviewer.cpp  test_objprop.cpp
